--- a/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
+++ b/src/app/modules/problems/pages/statistics/section-difficulties/section-difficulties.component.html
@@ -1,155 +1,31 @@
-<kep-card>
-  <div class="card-header">
-    <div class="card-title">
-      {{ 'Solved' | translate }}
-    </div>
+<kep-card customClass="statistics-difficulties">
+  <div class="statistics-difficulties__header">
+    <div class="statistics-difficulties__title">{{ 'DifficultyBreakdown' | translate }}</div>
+    <div class="statistics-difficulties__subtitle">{{ 'Solved' | translate }} · {{ completionRate }}%</div>
   </div>
-
-  <div class="card-body">
-    <div class="total">
-      <div class="chart">
-        @if (chartOptions) {
-          <apex-chart
-            [options]="chartOptions"
-          ></apex-chart>
-        }
-      </div>
+  <div class="statistics-difficulties__content">
+    <div class="statistics-difficulties__chart" *ngIf="chartOptions">
+      <apex-chart [options]="chartOptions"></apex-chart>
     </div>
-    <div class="difficulties">
-      <swiper [config]="swiperConfig" [height]="180">
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Beginner' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 1 | problemDifficultyColor }}">{{ difficulties.beginner }}</strong>
-                /
-                {{ difficulties.allBeginner }}
-              </div>
+    <div class="statistics-difficulties__list">
+      @for (item of difficultyItems; track item.label) {
+        <div class="statistics-difficulties__item">
+          <div class="statistics-difficulties__item-header">
+            <div class="statistics-difficulties__item-title">
+              <span class="badge bg-light text-{{ item.level | problemDifficultyColor }}">{{ item.label | translate }}</span>
             </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 1 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.beginner / difficulties.allBeginner"></ngb-progressbar>
+            <div class="statistics-difficulties__item-value">
+              <span class="text-{{ item.level | problemDifficultyColor }}">{{ item.solved }}</span>
+              <span class="statistics-difficulties__item-total">/ {{ item.total }}</span>
             </div>
           </div>
+          <ngb-progressbar
+            [value]="item.progress"
+            [type]="item.level | problemDifficultyColor"
+            class="statistics-difficulties__progress"
+          ></ngb-progressbar>
         </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Basic' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 2 | problemDifficultyColor }}">{{ difficulties.basic }}</strong>
-                /
-                {{ difficulties.allBasic }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 2 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.basic / difficulties.allBasic"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Normal' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 3 | problemDifficultyColor }}">{{ difficulties.normal }}</strong>
-                /
-                {{ difficulties.allNormal }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 3 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.normal / difficulties.allNormal"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Medium' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 4 | problemDifficultyColor }}">{{ difficulties.medium }}</strong>
-                /
-                {{ difficulties.allMedium }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 4 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.medium / difficulties.allMedium"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Advanced' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 5 | problemDifficultyColor }}">{{ difficulties.advanced }}</strong>
-                /
-                {{ difficulties.allAdvanced }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 5 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.advanced / difficulties.allAdvanced"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Hard' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 6 | problemDifficultyColor }}">{{ difficulties.hard }}</strong>
-                /
-                {{ difficulties.allHard }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 6 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.hard / difficulties.allHard"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="difficulty">
-            <div class="d-flex justify-content-between info">
-              <div class="title">
-                {{ 'Extremal' | translate }}
-              </div>
-              <div class="solved">
-                <strong class="text-{{ 7 | problemDifficultyColor }}">{{ difficulties.extremal }}</strong>
-                /
-                {{ difficulties.allExtremal }}
-              </div>
-            </div>
-            <div class="mt-2 progress-wrapper">
-              <ngb-progressbar type="{{ 7 | problemDifficultyColor }}"
-                               [value]="100 * difficulties.extremal / difficulties.allExtremal"></ngb-progressbar>
-            </div>
-          </div>
-        </div>
-      </swiper>
+      }
     </div>
   </div>
 </kep-card>
