--- a/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
+++ b/src/app/modules/problems/pages/statistics/section-profile/section-profile.component.html
@@ -1,109 +1,104 @@
-<div class="card">
-  <div class="card-body">
-    <div class="section-profile text-center">
-      <div class="avatar p-50 bg-primary">
-        <div class="avatar-content">
-          <i [data-feather]="'problem' | iconName" [size]="20"></i>
-        </div>
+<kep-card customClass="statistics-profile-card">
+  <div class="statistics-profile-card__header">
+    <div class="statistics-profile-card__title">
+      <div class="statistics-profile-card__icon">
+        <kep-icon name="problem" class="statistics-profile-card__icon-inner"></kep-icon>
       </div>
-      <div class="font-medium-5 mt-1">
-        {{ 'Problems' | translate }}
-        <br>
+      <div class="statistics-profile-card__heading">
+        <div class="statistics-profile-card__label">{{ 'Problems' | translate }}</div>
         <a
           [routerLink]="[Resources.Attempts, username]"
-          class="btn btn-outline-primary btn-sm mt-1 attempts-link">
+          class="btn btn-outline-primary btn-sm attempts-link"
+        >
           {{ 'Attempts' | translate }}
         </a>
-        <div class="font-medium-4 mt-2">
-          <span ngbTooltip="{{ 'Solved' | translate }}">
-            <i data-feather="check-circle"></i>
-            {{ general.solved }}
-          </span>
-
-          <span ngbTooltip="{{ 'Rating' | translate }}">
-            <i [data-feather]="'rating' | iconName" class="ms-1"></i>
-            {{ general.rating }}
-          </span>
-        </div>
-      </div>
-
-      <div class="font-medium-4 mt-1">
-        <span ngbTooltip="{{ 'Rank' | translate }}">
-          <i [data-feather]="'users'" class="ms-1"></i>
-          <span class="font-medium-3">
-            {{ general.rank }}({{ general.usersCount }})
-          </span>
-        </span>
       </div>
     </div>
-
-    <hr>
-
-    <div class="section-languages">
-      <div class="title">
-        {{ 'Languages' | translate }}
+    @if (username) {
+      <div class="statistics-profile-card__username">
+        @{{ username }}
       </div>
-
-      <div class="languages">
-        @for (data of langs; track data) {
-          <div class="d-flex language justify-content-between">
-            <div class="lang">
-              <span class="badge badge-{{ data.lang }}">
-                {{ data.langFull }}
-              </span>
-            </div>
-            <div class="result">
-              <strong>x{{ data.solved }}</strong>
-            </div>
-          </div>
-        }
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="section-tags">
-      <div class="title">
-        {{ 'Tags' | translate }}
-      </div>
-
-      <div class="tags">
-        @for (tag of tags; track tag) {
-          <div class="tag">
-            <span class="badge badge-pill bg-primary">
-              {{ tag.name }}
-            </span>
-            x{{ tag.value }}
-          </div>
-        }
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="section-topics">
-      <div class="title">
-        {{ 'Topics' | translate }}
-      </div>
-
-      <div class="topics">
-        @for (topic of topics; track topic) {
-          <div class="topic d-flex justify-content-between">
-            <div class="d-flex topic-info justify-content-start">
-              <div class="topic-icon">
-                <kep-icon [name]="topic.icon"></kep-icon>
-              </div>
-              <div class="topic-title">
-                {{ topic.topic }}
-              </div>
-            </div>
-            <div class="solved">
-              x{{ topic.solved }}
-            </div>
-          </div>
-        }
-      </div>
-    </div>
-
+    }
   </div>
-</div>
+
+  <div class="statistics-profile-card__stats">
+    <div class="statistics-profile-card__stat">
+      <div class="statistics-profile-card__stat-label">{{ 'Solved' | translate }}</div>
+      <div class="statistics-profile-card__stat-value">{{ general ? general.solved : 0 }}</div>
+    </div>
+    <div class="statistics-profile-card__stat">
+      <div class="statistics-profile-card__stat-label">{{ 'Rating' | translate }}</div>
+      <div class="statistics-profile-card__stat-value">{{ general ? general.rating : 0 }}</div>
+    </div>
+    <div class="statistics-profile-card__stat">
+      <div class="statistics-profile-card__stat-label">{{ 'Rank' | translate }}</div>
+      <div class="statistics-profile-card__stat-value">#{{ general ? general.rank : 0 }}</div>
+      <div class="statistics-profile-card__stat-sub">{{ general ? general.usersCount : 0 }} {{ 'Users' | translate }}</div>
+    </div>
+    <div class="statistics-profile-card__stat">
+      <div class="statistics-profile-card__stat-label">{{ 'SolvedWithSingleAttempt' | translate }}</div>
+      <div class="statistics-profile-card__stat-value">{{ singleAttemptSolved }}</div>
+      <div class="statistics-profile-card__stat-sub">{{ singleAttemptPercentage }}%</div>
+    </div>
+  </div>
+
+  @if (languages.length) {
+    <div class="statistics-profile-card__section">
+      <div class="statistics-profile-card__section-header">
+        <div class="statistics-profile-card__section-title">{{ 'Languages' | translate }}</div>
+        <div class="statistics-profile-card__section-subtitle">{{ 'MostUsedLanguages' | translate }}</div>
+      </div>
+      <div class="statistics-profile-card__languages">
+        @for (lang of languages; track lang.lang) {
+          <div class="statistics-profile-card__language">
+            <div class="statistics-profile-card__language-header">
+              <span class="statistics-profile-card__language-name badge badge-{{ lang.lang }}">{{ lang.langFull }}</span>
+              <span class="statistics-profile-card__language-value">×{{ lang.solved }}</span>
+            </div>
+            <div class="statistics-profile-card__language-bar">
+              <div class="statistics-profile-card__language-progress" [style.width.%]="lang.share"></div>
+            </div>
+          </div>
+        }
+      </div>
+    </div>
+  }
+
+  @if (topicsView.length) {
+    <div class="statistics-profile-card__section">
+      <div class="statistics-profile-card__section-header">
+        <div class="statistics-profile-card__section-title">{{ 'Topics' | translate }}</div>
+        <div class="statistics-profile-card__section-subtitle">{{ 'ProblemCategories' | translate }}</div>
+      </div>
+      <div class="statistics-profile-card__topics">
+        @for (topic of topicsView; track topic.code) {
+          <div class="statistics-profile-card__topic" ngbTooltip="{{ topic.topic }}">
+            <div class="statistics-profile-card__topic-icon">
+              <kep-icon [name]="topic.icon"></kep-icon>
+            </div>
+            <div class="statistics-profile-card__topic-body">
+              <div class="statistics-profile-card__topic-title">{{ topic.topic }}</div>
+              <div class="statistics-profile-card__topic-value">×{{ topic.solved }}</div>
+            </div>
+          </div>
+        }
+      </div>
+    </div>
+  }
+
+  @if (tagsView.length) {
+    <div class="statistics-profile-card__section statistics-profile-card__section--tags">
+      <div class="statistics-profile-card__section-header">
+        <div class="statistics-profile-card__section-title">{{ 'Tags' | translate }}</div>
+        <div class="statistics-profile-card__section-subtitle">{{ 'PopularTags' | translate }}</div>
+      </div>
+      <div class="statistics-profile-card__tags">
+        @for (tag of tagsView; track tag.name) {
+          <span class="statistics-profile-card__tag" ngbTooltip="{{ tag.value }} {{ 'Solved' | translate }}">
+            #{{ tag.name }}
+          </span>
+        }
+      </div>
+    </div>
+  }
+</kep-card>
